--- a/css/grid.scss
+++ b/css/grid.scss
@@ -35,7 +35,6 @@
     flex-wrap: wrap;
     .column {
       flex-basis: 100%;
-      overflow: hidden;
     }
   }
 }
